# SortVis

./: .gitignore  CMakeLists.txt  main.cpp
docs/: README.md
include/: SortingVisualizer.h  application.h  sorting_algos.h  sorting_window.h  sortvis_internal.h
misc/: SortWindowSpecs.md  imgui_notes.md
src/: SortingVisualizer.cpp  application.cpp  sorting_algos.cpp  sorting_window.cpp
